Update messages.pot: rename to LaphaeL-aicmd

--- a/locales/messages.pot
+++ b/locales/messages.pot
@@ -1,4 +1,4 @@
-# This .pot file is for "LaphaeLaicmd-linux" project's CLI interface
+# This .pot file is for "LaphaeL-aicmd" project's CLI interface
 # Copyright (C) 2024 LaphaeL
 # This file is distributed under the same license as the LaphaeLaicmd-linux package.
 # LaphaeL12304 LaphaeL12304@gmail.com, 2024.
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: LaphaeLaicmd-linux v1.2.3\n"
-"Report-Msgid-Bugs-To: https://github.com/LaphaeL12304/LaphaeLaicmd-linux/issues\n"
+"Report-Msgid-Bugs-To: https://github.com/LaphaeL12304/LaphaeL-aicmd/issues\n"
 "POT-Creation-Date: 2024-06-02 03:21+0800\n"
 "PO-Revision-Date: N/A\n"
 "Last-Translator: LaphaeL12304 LaphaeL12304@gmail.com\n"
@@ -97,7 +97,7 @@ msgid ""
 "e.g., \"/cmd whoami\" will execute \"whoami\".\n"
 "\n"
 "To see more informations, you may visit the following links:\n"
-"Github repository: https://github.com/LaphaeL12304/LaphaeLaicmd-linux\n"
+"Github repository: https://github.com/LaphaeL12304/LaphaeL-aicmd\n"
 msgstr ""
 
 
