--- a/src/locales/po_files/en_US.po
+++ b/src/locales/po_files/en_US.po
@@ -6,9 +6,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: LaphaeL-aicmd v1.2.3\n"
-"Report-Msgid-Bugs-To: https://github.com/LaphaeL12304/LaphaeL-aicmd/"
-"issues\n"
-"POT-Creation-Date: 2024-06-02 03:21+0800\n"
+"Report-Msgid-Bugs-To: https://github.com/LaphaeL12304/LaphaeL-aicmd/issues\n"
+"POT-Creation-Date: 2024-06-07 15:03+0800\n"
 "PO-Revision-Date: 2024-06-02 03:38+0800\n"
 "Last-Translator: LaphaeL <laphael12304@gmail.com>\n"
 "Language-Team: English\n"
@@ -18,138 +17,136 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
-#: main.py:41
-msgid "Initializing..."
-msgstr "Initializing..."
-
-#: main.py:44
-msgid "Getting system information..."
-msgstr "Getting system information..."
-
-#: main.py:53
-msgid "Getting configurations..."
-msgstr "Getting configurations..."
-
-#: main.py:56
-msgid "'instruct_prompt' is empty"
-msgstr "'instruct_prompt' is empty"
-
-#: main.py:61
+#: src/interact_AI.py:244
 msgid "Connecting to"
 msgstr "Connecting to"
 
-#: main.py:70
+#: src/interact_AI.py:253
 msgid "'ready'"
 msgstr "'ready'"
 
-#: main.py:77
+#: src/interact_AI.py:266 src/interact_AI.py:277
 msgid "Failed to obtain AI class: "
 msgstr "Failed to obtain AI class: "
 
-#: main.py:80
-msgid "Failed to connect to"
-msgstr "Failed to connect to"
+#: src/interact_AI.py:266
+msgid "Invalid AI class."
+msgstr "Invalid AI class."
 
-#: main.py:84
-msgid "Connection successed!"
-msgstr "Connection successed!"
+#: src/interact_AI.py:267 src/interact_AI.py:284 src/interact_AI.py:297
+msgid "Try another AI module? "
+msgstr "Try another AI module? "
 
-#: main.py:84
-msgid "have understood the instructions!"
-msgstr "have understood the instructions!"
-
-#: main.py:85
-msgid "is now ready!"
-msgstr "is now ready!"
-
-#: match_instruct.py:32
+#: src/interact_AI.py:274 src/interact_AI.py:291 src/interact_AI.py:304
+#: src/match_instruct.py:32
 msgid "Exitting program..."
 msgstr "Exitting program..."
 
-#: match_instruct.py:39
-msgid ""
-"\n"
-"What is this program:\n"
-"This program is named \"LaphaeLaicmd-linux\", it enables chat AI to execute "
-"commands on linux with feedback-loop for multi-step missions.\n"
-"This program is released under GNU v3, you may see \"LICENSE\" file to see "
-"more informations.\n"
-"\n"
-"Usage tutorial:\n"
-"- Enter \"aicmd\" in linux terminal to start this program.\n"
-"- You may edit \"data/AI_settings.toml\" to set API and select AI model "
-"(Setting API is required).\n"
-"- Since the program starts, you may type to chat with the AI (e.g., \"Please "
-"help me install chrome\").\n"
-"- Request from AI may include linux shell command, which require user's "
-"\"[Y/n]\" confirm to execute (Press Enter will also execute).\n"
-"- You may type text starting with \"/\" to use program instructions.\n"
-"\n"
-"Program instructions:\n"
-"These instructions can be run by entering the following commands after the "
-"program starts.\n"
-"\"/help\" : Print help text.\n"
-"\"/exit\" : Exit \"aicmd\" program.\n"
-"\"/content\" : This will print the content to be appended to the AI in the "
-"next request, including the user's manually executed commands and the system's "
-"output.\n"
-"\"/clear\" : This will clear the content to be appended to the AI (Only clear "
-"new contents, chat history won't be cleared).\n"
-"\"/cmd\" : This will manually execute the linux shell command following it, "
-"e.g., \"/cmd whoami\" will execute \"whoami\".\n"
-"\n"
-"To see more informations, you may visit the following links:\n"
-"Github repository: https://github.com/LaphaeL12304/LaphaeL-aicmd\n"
-msgstr ""
-"\n"
-"What is this program:\n"
-"This program is named \"LaphaeLaicmd-linux\", it enables chat AI to execute "
-"commands on linux with feedback-loop for multi-step missions.\n"
-"This program is released under GNU v3, you may see \"LICENSE\" file to see "
-"more informations.\n"
-"\n"
-"Usage tutorial:\n"
-"- Enter \"aicmd\" in linux terminal to start this program.\n"
-"- You may edit \"data/AI_settings.toml\" to set API and select AI model "
-"(Setting API is required).\n"
-"- Since the program starts, you may type to chat with the AI (e.g., \"Please "
-"help me install chrome\").\n"
-"- Request from AI may include linux shell command, which require user's "
-"\"[Y/n]\" confirm to execute (Press Enter will also execute).\n"
-"- You may type text starting with \"/\" to use program instructions.\n"
-"\n"
-"Program instructions:\n"
-"These instructions can be run by entering the following commands after the "
-"program starts.\n"
-"\"/help\" : Print help text.\n"
-"\"/exit\" : Exit \"aicmd\" program.\n"
-"\"/content\" : This will print the content to be appended to the AI in the "
-"next request, including the user's manually executed commands and the system's "
-"output.\n"
-"\"/clear\" : This will clear the content to be appended to the AI (Only clear "
-"new contents, chat history won't be cleared).\n"
-"\"/cmd\" : This will manually execute the linux shell command following it, "
-"e.g., \"/cmd whoami\" will execute \"whoami\".\n"
-"\n"
-"To see more informations, you may visit the following links:\n"
-"Github repository: https://github.com/LaphaeL12304/LaphaeL-aicmd\n"
+#: src/interact_AI.py:278
+msgid "Please check if your API key is valid."
+msgstr "Please check if your API key is valid."
 
-#: match_instruct.py:40
+#: src/interact_AI.py:279
+msgid "Try another API key? "
+msgstr "Try another API key? "
+
+#: src/interact_AI.py:295
+msgid "Failed to connect to"
+msgstr "Failed to connect to"
+
+#: src/interact_AI.py:296
+msgid "Please check if your API key, network, and AI module are valid."
+msgstr "Please check if your API key, network, and AI module are valid."
+
+#: src/interact_AI.py:308
+msgid "Connection successed!"
+msgstr "Connection successed!"
+
+#: src/interact_AI.py:308
+msgid "have understood the instructions!"
+msgstr "have understood the instructions!"
+
+#: src/main.py:44
+msgid "is now ready!"
+msgstr "is now ready!"
+
+#: src/config.py:236
+msgid "Please enter your API key for "
+msgstr "Please enter your API key for "
+
+#: src/config.py:241
+msgid "API key updated"
+msgstr "API key updated"
+
+#: src/config.py:247
+msgid "Supported classes: "
+msgstr "Supported classes: "
+
+#: src/config.py:248
+msgid "Please enter your selected AI class: "
+msgstr "Please enter your selected AI class: "
+
+#: src/config.py:253
+msgid "No such AI class. Please try again."
+msgstr "No such AI class. Please try again."
+
+#: src/config.py:256
+msgid "AI class updated"
+msgstr "AI class updated"
+
+#: src/config.py:265
+msgid "Supported model: "
+msgstr "Supported model: "
+
+#: src/config.py:266
+msgid "Please enter your selected AI model for "
+msgstr "Please enter your selected AI model for "
+
+#: src/config.py:272
+msgid "No such AI model. Please try again."
+msgstr "No such AI model. Please try again."
+
+#: src/config.py:275
+msgid "AI model updated"
+msgstr "AI model updated"
+
+#: src/config.py:296
+msgid "Initializing..."
+msgstr "Initializing..."
+
+#: src/config.py:299
+msgid "Getting system information..."
+msgstr "Getting system information..."
+
+#: src/config.py:307
+msgid "Getting configurations..."
+msgstr "Getting configurations..."
+
+#: src/config.py:309
+msgid "'instruct_prompt' is empty"
+msgstr "'instruct_prompt' is empty"
+
+#: src/config.py:314
+#, fuzzy
+msgid "Checking AI config..."
+msgstr "Getting configurations..."
+
+#: src/match_instruct.py:39
 msgid "# Omit help text\n"
 msgstr "# Omit help text\n"
 
-#: match_instruct.py:43
+#: src/match_instruct.py:42
 msgid "Here is the content to be sent to AI: \n"
 msgstr "Here is the content to be sent to AI: \n"
 
-#: match_instruct.py:44
+#: src/match_instruct.py:43
 msgid "# Omit printed content\n"
 msgstr "# Omit printed content\n"
 
-#: match_instruct.py:48
+#: src/match_instruct.py:47
 msgid "Content is cleared"
 msgstr "Content is cleared"
 
-#: match_instruct.py:51
+#: src/match_instruct.py:50
 msgid "No such command, you may enter '/help' for more information"
 msgstr "No such command, you may enter '/help' for more information"
